# sessdsa.2048

./: .gitignore  2048demo(带ai版).py  2048demo.py  2048demo_v0.0.1.py  2048demo_v0.0.2.py  CMakeLists.txt  Nmultimatchrunner.py  README.md  SESSDSA2018用户文档.md  SESSDSA2048开发者文档.md  TODO.md  analyser.py  analyser1.py  analyser2.py  chessboard.cpp  chessboard.py  constants.py  minimal_bind.cpp  plat.py  platform.py  player.py  sessdsa20现场竞赛时间节点ver0.5.md  setup.py  singlematchrunner.py  team.md  test.py  toolchain.cmake  单循环淘汰赛比赛设施 version1.0.0  对战平台接口demo.py  标准化对战平台接口v0.0.1.py  比赛设施使用文档(version1.3.1).txt  比赛设施使用文档.txt
MatchRunner/: manage.py
MatchRunner(version1.3.0)/: Fmultimatchrunner.py  Nmultimatchrunner.py  friendship.py  logdownloader.py  round_match.py  比赛设施使用文档(version1.3.2).txt
MatchRunner(version1.3.3)/: Fmultimatchrunner.py  Nmultimatchrunner.py  challenge.py  constants.py  friendship.py  human.py  information.py  livequeues.py  livetool.py  plat.py  singlematchrunner.py  testboard.py  比赛设施使用文档(version1.3.0).txt  比赛设施使用文档(version1.3.2).txt  比赛设施使用文档(version1.3.3).txt  比赛设施使用文档(version1.3.4).txt
MatchRunner(version1.3.3)/F19players/: player8.py
documents/: SESSDSA2018用户文档.md  sessdsa2048开发者文档.md  sessdsa2048用户文档.md
src/: CMakeLists.txt  README.md  README_SRC.md  analyser.html  analyser.py  analyser_dir.html  analyser_dir.js  analyser_dir_example.html  chessboard.cpp  constants.py  debug_match.py  dialog.py  human.html  human.js  human.py  humaninterface.py  less_stupid_player.py  libchessboard.md  livetool.py  neattool.py  plat.py  plat2.0.py  plat_2.py  player.py  round_match.py  stupid.py  stupid_player.py  toolchain.cmake
src/admin/: CMakeLists.txt  _constants.py  chessboard.cpp  libchessboard.md  secureclass.py
src/analyser/: 1.txt  analyser.html  analyser.py  analyser_dir.html  analyser_dir.js  analyser_dir_example.html
src/analyser/vsc-analyser/: README.md  extension.js  index.html  package.json  vsc-analyser-0.0.1.vsix
src/tools/: constants.py  human.html  human.js  neattool.py  plat.py  player.py
user/: README.md  dialog.py  gui.py  humaninterface.py  logdownloader  logdownloader.py  readme.md  test.py  updatetool.py  userinterface.py
